# chunker

./: .gitignore  CLAUDE.md  COMPILATION.md  CPU_SUPPORT.md  Cargo.toml  LICENSE  PERFORMANCE_REPORT.md  README.md  cobertura.xml  flake.nix  justfile  lefthook.yml  output_stdin.txt
.claude/agents/kfc/: spec-impl.md  spec-test.md
.claude/specs/chunker-improvements/: design.md  design_v1.md  design_v2.md  design_v3.md  design_v4.md  requirements.md  requirements_v1.md  requirements_v2.md  requirements_v3.md  requirements_v4.md  requirements_v5.md  requirements_v6.md  tasks.md
.forgejo/workflows/: ci.yml  claude-review.yml  release.yml
.githooks/: pre-commit
.github/workflows/: README.md  ci-parser.yml.tmp  ci.yml  release.yml
benches/: chunking_bench.rs  chunking_benchmark.rs  chunking_strategies.rs  comparison.rs  hashing_benchmarks.rs  throughput.rs
benchmarks/: DEPENDENCY_POLICY.md  README.md  latest.json  latest.md
crates/backend/: Cargo.toml  README.md
crates/backend/src/: lib.rs  s3.rs
crates/core/cas/: Cargo.toml  README.md
crates/core/cas/src/: lib.rs
crates/core/crypto/: Cargo.toml  README.md  THIRD_PARTY_NOTICES.md
crates/core/crypto/src/: b64.rs  error.rs  hash.rs  lib.rs  sign.rs  witness.rs
crates/core/crypto/tests/: contracts.rs
crates/core/meta/: Cargo.toml  README.md
crates/core/meta/src/: lib.rs
crates/node/: Cargo.toml  README.md
crates/node-bin/: Cargo.toml  README.md
crates/node-bin/src/: main.rs
crates/node/src/: lib.rs
crates/proto/nix/: Cargo.toml  README.md
crates/proto/nix/src/: lib.rs  narinfo.rs
crates/swarm/: Cargo.toml  README.md
crates/swarm/src/: config.rs  lib.rs  policy.rs  router.rs  transport.rs
crates/swarm/tests/: fabric_config.rs  placement_policy.rs
deploy/: build-fabric-cache.yaml  fabric.example.yaml
docs/adr/: 0001-flakecache-distributed-storage-fabric.md  0002-cache-trust-and-signing-model.md  0003-fabric-is-the-data-plane.md  0004-storage-routing-lives-in-the-fabric.md
docs/design/: content-addressed-store-format.md
docs/plans/: 2026-07-14-flakecache-repos-alignment.md  2026-07-14-flakecache-storage-fabric.md  2026-07-14-full-storage-and-distribution-fabric.md
docs/specs/: storage-fabric.md
docs/specs/schemas/: fabric-config-v1.schema.json
fuzz/: Cargo.toml
fuzz/fuzz_targets/: chunking.rs  compression.rs  decompression.rs  signing.rs
nif/: lib.rs
scripts/: export-criterion.py  setup-dev.sh
src/: chunking.rs  compression.rs  hashing.rs  ingest.rs  lib.rs  manifest.rs  nif.rs  policy.rs  signing.rs
tests/: proptest_suite.rs  streaming.rs  streaming_chunking.rs
