[package]
name = "chunker"
version = "0.0.0-dev"
authors = ["FlakeCache Team"]
edition = "2021"
description = "High-performance content-defined chunking for Nix NARs (Rustler NIF + standalone library)"
repository = "https://github.com/FlakeCache/chunker"
homepage = "https://github.com/FlakeCache/chunker"
documentation = "https://github.com/FlakeCache/chunker"
readme = "README.md"
license = "LicenseRef-Proprietary"
categories = ["algorithms", "compression", "cryptography"]
keywords = ["nix", "nar", "hash", "sign", "compress", "chunk", "fastcdc", "rustler", "nif"]
include = [
  "src/**",
  "benches/**",
  "tests/**",
  "README.md",
  "LICENSE",
  "Cargo.toml",
  "Cargo.lock",
  "priv/native/libchunker_nif-x86_64-linux.so",
  "bin/**"
]

[profile.release]
lto = true
codegen-units = 1
strip = true
debug = 0

[profile.bench]
lto = true
codegen-units = 1
debug = 0

[package.metadata.cargo-machete]
ignored = ["bzip2", "serde", "serde_json"]

[features]
default = ["asm"]
asm = ["sha2/asm"]
# Enable Rustler NIF bindings. This is disabled by default to keep the default
# build focused on the pure Rust library. Enable with `--features nif` when
# building the NIF cdylib for Elixir.
nif = ["rustler"]
async-stream = ["futures"]
telemetry = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry", "dep:tokio"]

[lib]
name = "chunker"
path = "src/lib.rs"
crate-type = ["lib", "cdylib"]

[dependencies]
rustler = { version = "0.37.0", optional = true }
thiserror = "1.0"
async-stream = "0.3"

# Cryptography
ed25519-dalek = { version = "2.2", features = ["rand_core", "fast", "batch", "zeroize"] }
sha2 = { version = "0.10.9" }
zeroize = { version = "1.7", features = ["derive"] }

# Compression
zstd = "0.13.3"
lzma-rs = "0.3.0"
bzip2 = "0.6.1"

# Content-defined chunking
fastcdc = "3.2.1"
xz2 = "0.1.7"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Async compatibility for streaming chunkers
futures = { version = "0.3", optional = true }

# Random number generation for key generation

# Using 0.8 for compatibility with ed25519-dalek 2.2 (requires rand_core 0.6)
rand = "0.8"

# Hex encoding
hex = "0.4.3"

# Base64 encoding with strict padding validation
base64 = "0.22.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
metrics = "0.24"
lz4_flex = "0.12.0"
blake3 = { version = "1.8.2", features = ["rayon"] }
bytes = "1.11.0"
rayon = "1.10"

# Telemetry (Optional)
opentelemetry = { version = "0.22", optional = true }
opentelemetry_sdk = { version = "0.22", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.15", optional = true }
tracing-opentelemetry = { version = "0.23", optional = true }
tokio = { version = "1.36", features = ["full"], optional = true }

[dev-dependencies]
tempfile = "3.12.0"
proptest = "1.4"
criterion = "0.5"
rand_chacha = "0.9.0"

[[bench]]
name = "throughput"
harness = false

[[bench]]
name = "comparison"
harness = false

# =============================================================================
# Enterprise-Grade Clippy Lints Configuration
# =============================================================================
# Strict, pedantic, and nursery lints enabled for maximum code quality
[lints.rust]
unsafe_code = "forbid"
missing_docs = "allow"  # Allow missing docs (rustler::init! macro doesn't support docs)
missing_debug_implementations = "warn"
missing_copy_implementations = "warn"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_import_braces = "deny"
unused_qualifications = "deny"
unused_attributes = "allow"  # Allow unused attributes (rustler::init! macro)
unused_results = "warn"
unused_must_use = "warn"

[lints.clippy]
# Enable all pedantic and nursery lints (with lower priority for allow overrides)
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }

# Deny critical issues (higher priority)
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "warn"
unimplemented = "warn"
unreachable = "warn"

# Performance (higher priority than groups)
all = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }

# Allow specific cases (NIF requirements)
multiple_crate_versions = "allow"
module_name_repetitions = "allow"
unnecessary_wraps = "allow"  # NIFs require Result wrapper
cast_possible_truncation = "allow"  # With safety comments
