[package]
name = "chunker-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.chunker]
path = ".."
default-features = false

[[bin]]
name = "chunking"
path = "fuzz_targets/chunking.rs"
test = false
doc = false

[[bin]]
name = "compression"
path = "fuzz_targets/compression.rs"
test = false
doc = false
bench = false

[[bin]]
name = "decompression"
path = "fuzz_targets/decompression.rs"
test = false
doc = false
bench = false

[[bin]]
name = "signing"
path = "fuzz_targets/signing.rs"
test = false
doc = false
bench = false
