[package]
name = "flakecache-swarm"
version = "0.1.0"
edition = "2024"
description = "Swarm coordination for FlakeCache: rendezvous-hash placement (membership + anti-entropy to follow)"
license = "MIT"
repository = "https://github.com/FlakeCache/chunker"
rust-version = "1.85"
readme = "README.md"
keywords = ["rendezvous-hashing", "placement", "distributed", "cache", "flakecache"]
categories = ["algorithms", "caching"]

[dependencies]
flakecache-cas = { path = "../core/cas" }
flakecache-crypto = { path = "../core/crypto", default-features = false }
bytes = "1"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
thiserror = "2"
ureq = { version = "3.1", default-features = false, features = ["rustls"] }

[dev-dependencies]
flakecache-backend = { path = "../backend" }
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
