[package]
name = "flakecache-cas"
version = "0.1.0"
edition = "2024"
description = "Content-addressed store (put/get by SHAKE-256 content id) for FlakeCache"
license = "MIT"
repository = "https://github.com/FlakeCache/chunker"
rust-version = "1.85"
readme = "README.md"
keywords = ["content-addressed", "storage", "deduplication", "cache", "flakecache"]
categories = ["filesystem", "caching"]

[dependencies]
flakecache-crypto = { path = "../crypto", default-features = false }
bytes = "1"
hex = "0.4"
thiserror = "2"

[dev-dependencies]
tempfile = "3"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
